[FIX] css: Increase z-index on inline comment button (side effect of r57795? ;)
git-svn-id: https://svn.code.sf.net/p/tikiwiki/code/branches/15.x@58385 b456876b-0849-0410-b77d-98878d47e9d5

--- a/themes/base_files/css/tiki_base.css
+++ b/themes/base_files/css/tiki_base.css
@@ -1726,6 +1726,7 @@ dl.note-list {
 }
 #note-editor-comment {
   padding: 0;
+  z-index: 2;
 }
 .subcomment {
   margin-left: 10px;
