--- a/themes/base_files/less/tiki-comments.less
+++ b/themes/base_files/less/tiki-comments.less
@@ -62,6 +62,7 @@ dl.note-list {
 
 #note-editor-comment {
 	padding: 0;
+	z-index: 2;
 }
 
 // moved to tiki-selectors.less
